# master-thesis

./: .gitignore  CMakeLists.txt  CMakeSettings.json  TestPatternWindow.pro  TwitFilGUI.pro  driveractionsprovider.cpp  driveractionsprovider.h  iodeviceplotter.cpp  iodeviceplotter.h  iodeviceplotterwidget.cpp  iodeviceplotterwidget.h  iodevicerecorder.cpp  iodevicerecorder.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  patternmodel.cpp  patternmodel.h  patternservice.cpp  patternservice.h  patternwindow.cpp  patternwindow.h  patternwindow.ui  recognizer.cpp  recognizer.h  testpatternwindow.cpp
.github/cmake/zmqpp/: CMakeLists.txt
.github/workflows/: cmake.yml
config/: config.cpp  config.h
cython/: preprocessor.cpp  preprocessor.h  recognizer.cpp  recognizer.h
io/: iodeviceplotter.cpp  iodeviceplotterwidget.cpp  iodeviceplotterwidget.h  iodevicerecorder.cpp  iodevicerecorder.h
misc/: worker.h
patterns/: patternmodel.cpp  patternmodel.h  patternservice.cpp  patternservice.h
python/: config.py  dtw.py  model_updater.py  predictor.py  transformer.py  twitrecog.py
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  patternwindow.cpp  patternwindow.h
